Navegação, Inserção, Listar todos, exclusão e edição

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="confirma_exclusao">CONFIRMA EXCLUSÃO?</string>
+
+    <string name="sim">Sim</string>
+    <string name="nao">Não</string>
+
     <string name="bt_iniciar">Iniciar</string>
     <string name="bt_concluir">Concluir</string>
 
